log
Thu 28 Mar 2024 02:24:22 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: ‘Lista’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista = (Lista *)malloc(sizeof(List));
      |                  ^~~~~
      |                  lista
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:25: error: expected expression before ‘)’ token
   32 |   List* lista = (Lista *)malloc(sizeof(List));
      |                         ^
Compilation failed
3021cf7
Thu 28 Mar 2024 02:24:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:25: error: expected expression before ‘)’ token
   32 |   List* lista = (lista *)malloc(sizeof(List));
      |                         ^
Compilation failed
e554b97
Thu 28 Mar 2024 02:25:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0b77c7b
Thu 28 Mar 2024 02:30:32 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bc2afca
Thu 28 Mar 2024 02:32:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
089f94c
Thu 28 Mar 2024 02:37:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
81fbcd0
Thu 28 Mar 2024 02:37:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0ad778f
